[gd_scene load_steps=13 format=3 uid="uid://5arpavsyycan"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_lhyn6"]
[ext_resource type="Texture2D" uid="uid://bx2wyurka44ca" path="res://assets/left_pallete.png" id="1_lrux4"]
[ext_resource type="Texture2D" uid="uid://deghcyfhg35bv" path="res://assets/right_pallete.png" id="2_4ksfn"]
[ext_resource type="Texture2D" uid="uid://drxcuwedwmqgv" path="res://assets/separator.png" id="3_beshx"]
[ext_resource type="Script" path="res://scripts/computer.gd" id="3_xpylr"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="4_vtb1u"]
[ext_resource type="Texture2D" uid="uid://ddy23qyx6k1od" path="res://assets/ball.png" id="4_x7c6f"]

[sub_resource type="GDScript" id="GDScript_i105b"]
script/source = "extends Node2D

# Called when the node enters the scene tree for the first time.
func _ready():
	pass


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxywa"]
size = Vector2(9, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtqbh"]
size = Vector2(640, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw5vl"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6kuh"]
size = Vector2(8, 416)

[node name="game" type="Node2D"]
position = Vector2(1, 0)
script = SubResource("GDScript_i105b")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(23, 192)
script = ExtResource("1_lhyn6")

[node name="pad" type="Sprite2D" parent="player"]
position = Vector2(-4, 0)
texture = ExtResource("1_lrux4")

[node name="pad_collision" type="CollisionShape2D" parent="player"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_wxywa")

[node name="computer" type="CharacterBody2D" parent="."]
position = Vector2(623, 192)
script = ExtResource("3_xpylr")

[node name="pad" type="Sprite2D" parent="computer"]
position = Vector2(-4, 0)
texture = ExtResource("2_4ksfn")

[node name="pad_collision" type="CollisionShape2D" parent="computer"]
position = Vector2(-3.5, 0)
shape = SubResource("RectangleShape2D_wxywa")

[node name="top_wall" type="StaticBody2D" parent="."]
position = Vector2(319, 16)

[node name="wall_collision" type="CollisionShape2D" parent="top_wall"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_gtqbh")

[node name="bottom_wall" type="StaticBody2D" parent="."]
position = Vector2(319, 424)

[node name="wall_collision" type="CollisionShape2D" parent="bottom_wall"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_gtqbh")

[node name="ball" type="CharacterBody2D" parent="."]
position = Vector2(319, 192)
script = ExtResource("4_vtb1u")

[node name="ball" type="Sprite2D" parent="ball"]
texture = ExtResource("4_x7c6f")

[node name="ball_collision" type="CollisionShape2D" parent="ball"]
shape = SubResource("RectangleShape2D_lw5vl")

[node name="separator" type="Sprite2D" parent="."]
position = Vector2(319, 200)
texture = ExtResource("3_beshx")

[node name="left_goal" type="StaticBody2D" parent="."]
position = Vector2(-1, 200)

[node name="goal_shape" type="CollisionShape2D" parent="left_goal"]
shape = SubResource("RectangleShape2D_b6kuh")

[node name="right_goal" type="StaticBody2D" parent="."]
position = Vector2(623, 176)

[node name="goal_shape" type="CollisionShape2D" parent="right_goal"]
position = Vector2(20, 24)
shape = SubResource("RectangleShape2D_b6kuh")
